# hybrid-cloud-controller

./: .dockerignore  .env.example  .env.production.example  .gitignore  .gitmodules  AUDIT-COMPLETION-SUMMARY.md  AUDIT-REVIEW-SUMMARY.md  CODING-STANDARDS-AUDIT.md  DEPLOYMENT-CHECKLIST.md  Dockerfile.api  Dockerfile.web_ui  FUTURE-ENHANCEMENTS.md  PRODUCTION-DEPLOYMENT.md  PRODUCTION-READINESS-SUMMARY.md  QUICK-START-TOMORROW.md  README.md  SESSION-CHECKPOINT-2026-04-14.md  SESSION-SUMMARY-2026-03-09.md  UAT-CHECKPOINT.md  UAT-FINAL-SUMMARY.md  UAT-GUIDED-SESSION.md  UAT-ISSUES.md  UAT-RESUME-QUICK-START.md  UAT-SESSION-2-RESUME.md  UAT-SESSION-3-CHECKPOINT.md  UAT-SESSION-4-CHECKPOINT.md  UAT-SESSION-5-RESUME.md  UAT-SESSION-6-CHECKPOINT.md  UAT-SESSION-6-RESUME.md  UAT-SESSION-7-CHECKPOINT.md  UAT-TEST-PLAN.md  change-log.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-development.piptools  requirements-development.txt  requirements.piptools  requirements.txt  ruff.toml
.kiro/steering/: ai-agent-best-practices.md  coding-standards.md
scripts/: generate-production-keys.py  setup-monitoring.sh
tests/: conftest.py
tests/integration/: __init__.py
tests/property/: __init__.py  test_preservation.py  test_proxy_endpoints_bug_condition.py
tests/unit/: __init__.py  test_auth.py  test_auth_api.py  test_auth_routes.py  test_aws_costs.py  test_calculator.py  test_collector.py  test_configuration_routes.py  test_configurations_api.py  test_conversation_manager.py  test_crypto.py  test_dashboard.py  test_localstack_adapter.py  test_monitoring_api.py  (+15 more)
(+8 files in other folders)
