[project]
name = "hybrid-cloud-controller"
version = "0.1.0"
description = "A Python-based application for comparing TCO between on-premises and AWS cloud hosting"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Hybrid Cloud Controller Team"}
]
keywords = ["cloud", "tco", "aws", "infrastructure", "provisioning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "flask>=3.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "boto3>=1.34.0",
    "bcrypt>=4.1.0",
    "cryptography>=42.0.0",
    "hypothesis>=6.98.0",
    "python-terraform>=0.10.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.2.0",
    "hypothesis>=6.98.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["packages*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
markers = [
    "unit: Unit tests",
    "property: Property-based tests",
    "integration: Integration tests",
]
